--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ Version: 2.0
 body {
   position: relative;
   background-image: url("./img/Flori_highres.png"), url("./img/Background_highres_extended2.png");
-  background-size: 65%, 100%;
+  background-size: 65%, 1920px;
   background-repeat: no-repeat;
   background-position: top right, top;
   margin: 0;
@@ -233,7 +233,7 @@ h3 {
 .projekte figcaption {
   margin-top: 2.25rem;
   font-size: 20px;
-  color: #F1F3E8;
+  color: #020F1F;
   text-shadow: 0rem 0.1875rem 0.375rem rgba(0, 0, 0, 0.2);
 }
 
