--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,7 @@ $vocalnexus-shadow: 0rem 0.1875rem 0.375rem rgba(0, 0, 0, 0.2);
 body {
     position: relative;
     background-image: url("./img/Flori_highres.png"), url("./img/Background_highres_extended2.png");
-    background-size: 65%, 100%;
+    background-size: 65%, 1920px;
     background-repeat: no-repeat;
     background-position: top right, top;
     margin: 0;
@@ -242,7 +242,7 @@ h3 {
     figcaption {
         margin-top: 2.25rem;
         font-size: 20px;
-        color: $vocalnexus-white;
+        color: $vocalnexus-black;
         text-shadow: $vocalnexus-shadow;
     }
 
